--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -349,6 +349,19 @@
  	 	 	}
  	 	},
  	 	"chatBanner": {
+ 	 	 	"chatExploit": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"vpnName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Chat Exploit está vigente, todo el mensaje enviado será alterado. ¡Use ${vpnName} para asegurar su conexión!",
+ 	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
+ 	 	 	 	},
+ 	 	 	 	"activateVPN": {
+ 	 	 	 	 	"trans": "Activar VPN",
+ 	 	 	 	 	"eng": "Activate VPN"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"refreshBuff": {
  	 	 	 	"title": {
  	 	 	 	 	"vars": [
@@ -1484,15 +1497,6 @@
  	 	 	 	"eng": "This item is locked"
  	 	 	}
  	 	},
- 	 	"afkStartPopup": {
- 	 	 	"timeEstimate": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"time"
- 	 	 	 	],
- 	 	 	 	"trans": "Esto tomará ${time}",
- 	 	 	 	"eng": "This will take ${time}"
- 	 	 	}
- 	 	},
  	 	"calibration": {
  	 	 	"confirmation": {
  	 	 	 	"title": {
@@ -2313,7 +2317,7 @@
  	 	},
  	 	"amount": {
  	 	 	"trans": "Cantidad",
- 	 	 	"eng": "Amount"
+ 	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Capacidad de Colaboración",
@@ -3251,6 +3255,10 @@
  	 	 	"trans": "Prestigio",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation11": {
+ 	 	 	"trans": "Ciberacoso",
+ 	 	 	"eng": "CyberKitty"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderador",
  	 	 	"eng": "Moderator"
@@ -3610,6 +3618,46 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Perfil enmarcado de Halloween (con animación)",
  	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Desbloquear biografía personalizada",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Decoración de código de barras en el perfil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Personalizar el lema de pandillas",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Personalizar la imagen de las pandillas",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Más llegando en la actualización futura",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation11": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Título de donación \"Cyberkitty\"",
+ 	 	 	 	 	"eng": "\"CyberKitty\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Desbloquear la personalización de la imagen del perfil",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Marco de chat de Kitty (con animación)",
+ 	 	 	 	 	"eng": "Kitty chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Perfil enmarcado de Kitty (con animación)",
+ 	 	 	 	 	"eng": "Kitty Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Desbloquear biografía personalizada",
@@ -4432,7 +4480,22 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Una calabaza tallada que está iluminada por un LED en el interior. Es un artículo decorativo para el Halloween.",
- 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
+ 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween. You can craft a Locked Legendary Container with 100 of this"
+ 	 	 	}
+ 	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Fragmento de refuerzo de recompensa",
+ 	 	 	 	"eng": "Reward Booster Shard"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"rewardMult",
+ 	 	 	 	 	"time",
+ 	 	 	 	 	"costMult"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Mientras que Shard está activo, todos los jugadores pueden optar por iniciar ciertas tareas de AFK en Boost Mode ™, ganando una recompensa de ${rewardMult} x mientras aumentan el costo y la duración en ${costMult} x. \\ n * Este artículo todavía está beta y está sujeto a un cambio de equilibrio, use inmediatamente después de la compra *",
+ 	 	 	 	"eng": "While shard is active all players can choose to start certain AFK tasks in Boost Mode™, gaining ${rewardMult}x reward while increasing cost and duration by ${costMult}x. \\n* This item is still beta and subject to balance change, please use immediately after purchase *"
  	 	 	}
  	 	},
  	 	"experienceShard": {
@@ -5364,6 +5427,10 @@
  	 	 	"trans": "NanoBot de Calibración Segura",
  	 	 	"eng": "Calibration Safety Nano Bot"
  	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"trans": "Afk recompensas de recompensa",
+ 	 	 	"eng": "AFK Reward Boost"
+ 	 	},
  	 	"pirate": {
  	 	 	"trans": "Exploit de Chat [PIRATA]",
  	 	 	"eng": "Chat Exploit [PIRATE]"
@@ -6133,6 +6200,52 @@
  	 	 	}
  	 	}
  	},
+ 	"chatExploit": {
+ 	 	"loveWords": {
+ 	 	 	"trans": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	],
+ 	 	 	"eng": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	]
+ 	 	}
+ 	},
  	"createClanModal": {
  	 	"gangNameInput": {
  	 	 	"title": {
@@ -6347,6 +6460,14 @@
  	 	 	"trans": "El descuento termina en ${date}",
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
+ 	 	"endDate": {
+ 	 	 	"vars": [
+ 	 	 	 	"date",
+ 	 	 	 	"relative"
+ 	 	 	],
+ 	 	 	"trans": "Adición limitada hasta ${date} (finalizar en ${relative})",
+ 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Este título nunca caducará. \\n Se queda en tu cuenta para siempre.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
@@ -6359,6 +6480,68 @@
  	 	 	],
  	 	 	"trans": "Este es un ejemplo de Marco de Chat de Rango ${tierName} ",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"actionStartModal": {
+ 	 	"timeReductionButton": {
+ 	 	 	"title": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName",
+ 	 	 	 	 	"currentPercent",
+ 	 	 	 	 	""
+ 	 	 	 	],
+ 	 	 	 	"trans": "Reducción del tiempo (actualmente ${currentPercent}%)",
+ 	 	 	 	"eng": "Time Reduction (currently ${currentPercent}%)"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Reduzca el tiempo necesario para la acción en un 40%, apilable hasta el 80%",
+ 	 	 	 	"eng": "Reduce time needed for action by 40%, stackable upto 80%"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "reducir ahora",
+ 	 	 	 	"eng": "reduce now"
+ 	 	 	}
+ 	 	},
+ 	 	"extendButton": {
+ 	 	 	"activatedTitle": {
+ 	 	 	 	"trans": "Recompensa Boost (activado)",
+ 	 	 	 	"eng": "Reward Boost (Activated)"
+ 	 	 	},
+ 	 	 	"notActivatedTitle": {
+ 	 	 	 	"trans": "Impulso de recompensa",
+ 	 	 	 	"eng": "Reward Boost"
+ 	 	 	},
+ 	 	 	"activatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Boost activado, debe marcar la casilla de verificación a continuación para habilitarla para esta tarea",
+ 	 	 	 	"eng": "Boost activated, you must tick the checkbox below to enable it for this task"
+ 	 	 	},
+ 	 	 	"notActivatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "¡Duplique los artículos y exp! mientras que la duración y el costo aumentarán 4 veces",
+ 	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "Aumento ahora",
+ 	 	 	 	"eng": "Boost now"
+ 	 	 	},
+ 	 	 	"enableBoost": {
+ 	 	 	 	"trans": "Habilitar el impulso de recompensa",
+ 	 	 	 	"eng": "Enable reward boost"
+ 	 	 	}
+ 	 	},
+ 	 	"startButton": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "comienzo",
+ 	 	 	 	"eng": "start"
+ 	 	 	}
  	 	}
  	}
 }
