--- a/contribution/lang/id.json
+++ b/contribution/lang/id.json
@@ -349,6 +349,19 @@
  	 	 	}
  	 	},
  	 	"chatBanner": {
+ 	 	 	"chatExploit": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"vpnName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Eksploitasi obrolan berlaku, semua pesan yang dikirim akan diubah. Gunakan ${vpnName} untuk mengamankan koneksi Anda!",
+ 	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
+ 	 	 	 	},
+ 	 	 	 	"activateVPN": {
+ 	 	 	 	 	"trans": "Aktifkan VPN",
+ 	 	 	 	 	"eng": "Activate VPN"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"refreshBuff": {
  	 	 	 	"title": {
  	 	 	 	 	"vars": [
@@ -1484,15 +1497,6 @@
  	 	 	 	"eng": "This item is locked"
  	 	 	}
  	 	},
- 	 	"afkStartPopup": {
- 	 	 	"timeEstimate": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"time"
- 	 	 	 	],
- 	 	 	 	"trans": "Ini akan memakan ${time}",
- 	 	 	 	"eng": "This will take ${time}"
- 	 	 	}
- 	 	},
  	 	"calibration": {
  	 	 	"confirmation": {
  	 	 	 	"title": {
@@ -2313,7 +2317,7 @@
  	 	},
  	 	"amount": {
  	 	 	"trans": "Jumlah",
- 	 	 	"eng": "Amount"
+ 	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Kapasitas Kalibrasi",
@@ -3251,6 +3255,10 @@
  	 	 	"trans": "Prestise",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation11": {
+ 	 	 	"trans": "CyberKitty",
+ 	 	 	"eng": "CyberKitty"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderator",
  	 	 	"eng": "Moderator"
@@ -3613,6 +3621,46 @@
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Membuka Kunci Bio Kustom",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Dekorasi barcode pada profil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Kustomisasi moto geng",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Kustomisasi gambar geng",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Lebih banyak datang di pembaruan mendatang",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation11": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Judul Donasi \"CyberKitty\"",
+ 	 	 	 	 	"eng": "\"CyberKitty\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Buka kunci kustomisasi gambar profil",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Bingkai obrolan kitty (dengan animasi)",
+ 	 	 	 	 	"eng": "Kitty chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Profil Bingkai Kitty (dengan animasi)",
+ 	 	 	 	 	"eng": "Kitty Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Buka Kunci Bio Kustom",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -4432,7 +4480,22 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Labu berukir yang diterangi oleh LED di dalam. Ini adalah penggunaan barang dekoratif untuk Halloween.",
- 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
+ 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween. You can craft a Locked Legendary Container with 100 of this"
+ 	 	 	}
+ 	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Hadiah Booster Shard",
+ 	 	 	 	"eng": "Reward Booster Shard"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"rewardMult",
+ 	 	 	 	 	"time",
+ 	 	 	 	 	"costMult"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Sementara Shard aktif, semua pemain dapat memilih untuk memulai tugas AFK tertentu di Boost Mode ™, mendapatkan ${rewardMult} x hadiah sambil meningkatkan biaya dan durasi sebesar ${costMult} x. \\ n * Item ini masih beta dan dapat menyeimbangkan perubahan, silakan gunakan segera setelah pembelian *",
+ 	 	 	 	"eng": "While shard is active all players can choose to start certain AFK tasks in Boost Mode™, gaining ${rewardMult}x reward while increasing cost and duration by ${costMult}x. \\n* This item is still beta and subject to balance change, please use immediately after purchase *"
  	 	 	}
  	 	},
  	 	"experienceShard": {
@@ -5364,6 +5427,10 @@
  	 	 	"trans": "Kalibrasi keselamatan nano bot",
  	 	 	"eng": "Calibration Safety Nano Bot"
  	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"trans": "AFK Reward Boost",
+ 	 	 	"eng": "AFK Reward Boost"
+ 	 	},
  	 	"pirate": {
  	 	 	"trans": "Eksploitasi Obrolan [Bajak Laut]",
  	 	 	"eng": "Chat Exploit [PIRATE]"
@@ -5797,8 +5864,7 @@
  	 	 	"noTrait": {
  	 	 	 	"vars": [
  	 	 	 	 	"tierPart",
- 	 	 	 	 	"name",
- 	 	 	 	 	""
+ 	 	 	 	 	"name"
  	 	 	 	],
  	 	 	 	"trans": "${tierPart} ${name}",
  	 	 	 	"eng": "${tierPart} ${name}"
@@ -6133,6 +6199,52 @@
  	 	 	}
  	 	}
  	},
+ 	"chatExploit": {
+ 	 	"loveWords": {
+ 	 	 	"trans": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	],
+ 	 	 	"eng": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	]
+ 	 	}
+ 	},
  	"createClanModal": {
  	 	"gangNameInput": {
  	 	 	"title": {
@@ -6347,6 +6459,14 @@
  	 	 	"trans": "Diskon berakhir dengan ${date}",
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
+ 	 	"endDate": {
+ 	 	 	"vars": [
+ 	 	 	 	"date",
+ 	 	 	 	"relative"
+ 	 	 	],
+ 	 	 	"trans": "Tambahan Terbatas hingga ${date} (Akhir dari ${relative})",
+ 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Judul ini tidak akan pernah kedaluwarsa. \\ NIT tetap dengan akun Anda selamanya.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
@@ -6359,6 +6479,67 @@
  	 	 	],
  	 	 	"trans": "Contoh bingkai obrolan dari Tier ${tierName} ",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"actionStartModal": {
+ 	 	"timeReductionButton": {
+ 	 	 	"title": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName",
+ 	 	 	 	 	"currentPercent"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Pengurangan Waktu (saat ini ${currentPercent}%)",
+ 	 	 	 	"eng": "Time Reduction (currently ${currentPercent}%)"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Kurangi waktu yang dibutuhkan untuk tindakan sebesar 40%, dapat ditumpuk hingga 80%",
+ 	 	 	 	"eng": "Reduce time needed for action by 40%, stackable upto 80%"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "kurangi sekarang",
+ 	 	 	 	"eng": "reduce now"
+ 	 	 	}
+ 	 	},
+ 	 	"extendButton": {
+ 	 	 	"activatedTitle": {
+ 	 	 	 	"trans": "Hadiah Boost (diaktifkan)",
+ 	 	 	 	"eng": "Reward Boost (Activated)"
+ 	 	 	},
+ 	 	 	"notActivatedTitle": {
+ 	 	 	 	"trans": "Dorongan hadiah",
+ 	 	 	 	"eng": "Reward Boost"
+ 	 	 	},
+ 	 	 	"activatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Boost Diaktifkan, Anda harus mencentang kotak centang di bawah ini untuk mengaktifkannya untuk tugas ini",
+ 	 	 	 	"eng": "Boost activated, you must tick the checkbox below to enable it for this task"
+ 	 	 	},
+ 	 	 	"notActivatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Gandakan item dan exp! Sedangkan durasi dan biaya akan meningkat 4 kali",
+ 	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "Dorongan sekarang",
+ 	 	 	 	"eng": "Boost now"
+ 	 	 	},
+ 	 	 	"enableBoost": {
+ 	 	 	 	"trans": "Aktifkan Boost Hadiah",
+ 	 	 	 	"eng": "Enable reward boost"
+ 	 	 	}
+ 	 	},
+ 	 	"startButton": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Mulailah",
+ 	 	 	 	"eng": "start"
+ 	 	 	}
  	 	}
  	}
 }
