--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -349,6 +349,19 @@
  	 	 	}
  	 	},
  	 	"chatBanner": {
+ 	 	 	"chatExploit": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"vpnName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "A exploração de bate -papo está em vigor, todas as mensagens enviadas serão alteradas. Use ${vpnName} para proteger sua conexão!",
+ 	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
+ 	 	 	 	},
+ 	 	 	 	"activateVPN": {
+ 	 	 	 	 	"trans": "Ative VPN",
+ 	 	 	 	 	"eng": "Activate VPN"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"refreshBuff": {
  	 	 	 	"title": {
  	 	 	 	 	"vars": [
@@ -1484,15 +1497,6 @@
  	 	 	 	"eng": "This item is locked"
  	 	 	}
  	 	},
- 	 	"afkStartPopup": {
- 	 	 	"timeEstimate": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"time"
- 	 	 	 	],
- 	 	 	 	"trans": "Isso levará ${time}",
- 	 	 	 	"eng": "This will take ${time}"
- 	 	 	}
- 	 	},
  	 	"calibration": {
  	 	 	"confirmation": {
  	 	 	 	"title": {
@@ -2313,7 +2317,7 @@
  	 	},
  	 	"amount": {
  	 	 	"trans": "Quantidade",
- 	 	 	"eng": "Amount"
+ 	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Capacidade de Calibração",
@@ -3251,6 +3255,10 @@
  	 	 	"trans": "Prestígio",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation11": {
+ 	 	 	"trans": "Cyberkitty",
+ 	 	 	"eng": "CyberKitty"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderador",
  	 	 	"eng": "Moderator"
@@ -3629,6 +3637,46 @@
  	 	 	 	},
  	 	 	 	"9": {
  	 	 	 	 	"trans": "Mais benefícios em atualizações futuras",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation11": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Título de doação \"Cyberkitty\"",
+ 	 	 	 	 	"eng": "\"CyberKitty\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Desbloquear a personalização da imagem do perfil",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Quadro de bate -papo de gatinho (com animação)",
+ 	 	 	 	 	"eng": "Kitty chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Perfil de enquadramento de Kitty (com animação)",
+ 	 	 	 	 	"eng": "Kitty Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Desbloqueie a biografia personalizada",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Decoração de código de barras no perfil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Personalize o lema de gangue",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Personalize a imagem da gangue",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Mais vindo em atualização futura",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -4432,7 +4480,22 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Uma abóbora esculpida que é iluminada por um LED dentro. É um item decorativo para o Halloween.",
- 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
+ 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween. You can craft a Locked Legendary Container with 100 of this"
+ 	 	 	}
+ 	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Recompensa SHARD SHARD",
+ 	 	 	 	"eng": "Reward Booster Shard"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"rewardMult",
+ 	 	 	 	 	"time",
+ 	 	 	 	 	"costMult"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Enquanto o Shard está ativo, todos os jogadores podem optar por iniciar certas tarefas AFK no Boost Mode ™, obtendo ${rewardMult} x recompensa enquanto aumenta o custo e a duração em ${costMult} x. \\ n * Este item ainda é beta e sujeito a alteração do saldo, use imediatamente após a compra *",
+ 	 	 	 	"eng": "While shard is active all players can choose to start certain AFK tasks in Boost Mode™, gaining ${rewardMult}x reward while increasing cost and duration by ${costMult}x. \\n* This item is still beta and subject to balance change, please use immediately after purchase *"
  	 	 	}
  	 	},
  	 	"experienceShard": {
@@ -4917,20 +4980,20 @@
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
  	 	 	 	 	"Te ajudarei a progredir para a próxima área!",
-					"Tenho acesso ao conhecimento do mundo inteiro... porém sou tratado como um livro de receitas",
-					"O nome de minha filha não é Mithra! Parem de zombar dela!",
-					"Você está preparado?",
-					"Uma chave não é nada sem um cofre.",
-					"O que pesa mais, viajantes? Suas armas, ou seu passado?",
-					"Chave acima de tudo... exceto de uma boa bebida.",
-					"Uma chave, uma função."
+ 	 	 	 	 	"Tenho acesso ao conhecimento do mundo inteiro... porém sou tratado como um livro de receitas",
+ 	 	 	 	 	"O nome de minha filha não é Mithra! Parem de zombar dela!",
+ 	 	 	 	 	"Você está preparado?",
+ 	 	 	 	 	"Uma chave não é nada sem um cofre.",
+ 	 	 	 	 	"O que pesa mais, viajantes? Suas armas, ou seu passado?",
+ 	 	 	 	 	"Chave acima de tudo... exceto de uma boa bebida.",
+ 	 	 	 	 	"Uma chave, uma função."
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll help you to progress to the next area!"
  	 	 	 	]
  	 	 	},
  	 	 	"name": {
- 	 	 	 	"trans": "Terminal",
+ 	 	 	 	"trans": "terminal",
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
@@ -5576,6 +5639,10 @@
  	 	"upgradeNoBreak": {
  	 	 	"trans": "Nano robô de segurança de calibração",
  	 	 	"eng": "Calibration Safety Nano Bot"
+ 	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"trans": "AFK Recompensa Boost",
+ 	 	 	"eng": "AFK Reward Boost"
  	 	},
  	 	"pirate": {
  	 	 	"trans": "Exploit de chat [PIRATA]",
@@ -6346,6 +6413,52 @@
  	 	 	}
  	 	}
  	},
+ 	"chatExploit": {
+ 	 	"loveWords": {
+ 	 	 	"trans": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	],
+ 	 	 	"eng": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	]
+ 	 	}
+ 	},
  	"createClanModal": {
  	 	"gangNameInput": {
  	 	 	"title": {
@@ -6550,7 +6663,7 @@
  	 	 	"vars": [
  	 	 	 	"price"
  	 	 	],
- 	 	 	"trans": "${price} Unit",
+ 	 	 	"trans": "${price} unidade",
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"unitPriceDiscountEndDate": {
@@ -6559,6 +6672,14 @@
  	 	 	],
  	 	 	"trans": "Desconto termina em ${date}",
  	 	 	"eng": "Discount ends in ${date}"
+ 	 	},
+ 	 	"endDate": {
+ 	 	 	"vars": [
+ 	 	 	 	"date",
+ 	 	 	 	"relative"
+ 	 	 	],
+ 	 	 	"trans": "Adição limitada até ${date} (termine em ${relative})",
+ 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
  	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Este título nunca expirará.\\nEle permanece em sua conta para sempre.",
@@ -6572,6 +6693,68 @@
  	 	 	],
  	 	 	"trans": "Exemplo da moldura de bate-papo do nível ${tierName}",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"actionStartModal": {
+ 	 	"timeReductionButton": {
+ 	 	 	"title": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName",
+ 	 	 	 	 	"currentPercent",
+ 	 	 	 	 	""
+ 	 	 	 	],
+ 	 	 	 	"trans": "Redução de tempo (atualmente ${currentPercent}%)",
+ 	 	 	 	"eng": "Time Reduction (currently ${currentPercent}%)"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Reduza o tempo necessário para a ação em 40%, empilhável até 80%",
+ 	 	 	 	"eng": "Reduce time needed for action by 40%, stackable upto 80%"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "Reduza agora",
+ 	 	 	 	"eng": "reduce now"
+ 	 	 	}
+ 	 	},
+ 	 	"extendButton": {
+ 	 	 	"activatedTitle": {
+ 	 	 	 	"trans": "Boost de recompensa (ativado)",
+ 	 	 	 	"eng": "Reward Boost (Activated)"
+ 	 	 	},
+ 	 	 	"notActivatedTitle": {
+ 	 	 	 	"trans": "Boost de recompensa",
+ 	 	 	 	"eng": "Reward Boost"
+ 	 	 	},
+ 	 	 	"activatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Boost ativado, você deve marcar a caixa de seleção abaixo para ativá -la para esta tarefa",
+ 	 	 	 	"eng": "Boost activated, you must tick the checkbox below to enable it for this task"
+ 	 	 	},
+ 	 	 	"notActivatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Dobre os itens e exp! enquanto a duração e o custo aumentarão em 4 vezes",
+ 	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "Aumentar agora",
+ 	 	 	 	"eng": "Boost now"
+ 	 	 	},
+ 	 	 	"enableBoost": {
+ 	 	 	 	"trans": "Ativar aumento de recompensa",
+ 	 	 	 	"eng": "Enable reward boost"
+ 	 	 	}
+ 	 	},
+ 	 	"startButton": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "começar",
+ 	 	 	 	"eng": "start"
+ 	 	 	}
  	 	}
  	}
 }
