--- a/contribution/lang/sk.json
+++ b/contribution/lang/sk.json
@@ -13,7 +13,7 @@
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Chat",
+ 	 	 	"trans": "Chatovať",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -349,6 +349,19 @@
  	 	 	}
  	 	},
  	 	"chatBanner": {
+ 	 	 	"chatExploit": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"vpnName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "Exploit chat je v skutočnosti, všetky odoslané správy sa zmenia. Na zabezpečenie pripojenia použite ${vpnName}!",
+ 	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
+ 	 	 	 	},
+ 	 	 	 	"activateVPN": {
+ 	 	 	 	 	"trans": "Aktivovať VPN",
+ 	 	 	 	 	"eng": "Activate VPN"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"refreshBuff": {
  	 	 	 	"title": {
  	 	 	 	 	"vars": [
@@ -1484,15 +1497,6 @@
  	 	 	 	"eng": "This item is locked"
  	 	 	}
  	 	},
- 	 	"afkStartPopup": {
- 	 	 	"timeEstimate": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"time"
- 	 	 	 	],
- 	 	 	 	"trans": "To bude trvať ${time}",
- 	 	 	 	"eng": "This will take ${time}"
- 	 	 	}
- 	 	},
  	 	"calibration": {
  	 	 	"confirmation": {
  	 	 	 	"title": {
@@ -2313,7 +2317,7 @@
  	 	},
  	 	"amount": {
  	 	 	"trans": "Výška",
- 	 	 	"eng": "Amount"
+ 	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Kalibračná kapacita",
@@ -3251,6 +3255,10 @@
  	 	 	"trans": "Prestíž",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation11": {
+ 	 	 	"trans": "Kybernetický",
+ 	 	 	"eng": "CyberKitty"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Moderátor",
  	 	 	"eng": "Moderator"
@@ -3610,6 +3618,46 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Halloween zarámovaný profil (s animáciou)",
  	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Odomknite vlastné životopis",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Dekorácia čiarových kódov na profile",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Prispôsobte motto gangov",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Prispôsobte obrázok gangov",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Viac prichádza v budúcnosti aktualizácie",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation11": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "„Cyberkitty“ Darčekový titul",
+ 	 	 	 	 	"eng": "\"CyberKitty\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Odomknite prispôsobenie profilu",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Kitty Chat Frame (s animáciou)",
+ 	 	 	 	 	"eng": "Kitty chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Kitty zarámovaný profil (s animáciou)",
+ 	 	 	 	 	"eng": "Kitty Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Odomknite vlastné životopis",
@@ -4432,7 +4480,22 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Vyrezávaná tekvica, ktorá je osvetlená LED vo vnútri. Je to dekoratívne použitie pre Halloween.",
- 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
+ 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween. You can craft a Locked Legendary Container with 100 of this"
+ 	 	 	}
+ 	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Odmena posilňovača Shard",
+ 	 	 	 	"eng": "Reward Booster Shard"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"rewardMult",
+ 	 	 	 	 	"time",
+ 	 	 	 	 	"costMult"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Zatiaľ čo Shard je aktívny, všetci hráči sa môžu rozhodnúť, že začnú určité úlohy AFK v Boost Mode ™, získavajú ${rewardMult} x odmenu a zároveň zvyšujú náklady a trvanie o ${costMult} x. \\ n * Táto položka je stále beta a je predmetom zmeny zostatku, použite okamžite po zakúpení *",
+ 	 	 	 	"eng": "While shard is active all players can choose to start certain AFK tasks in Boost Mode™, gaining ${rewardMult}x reward while increasing cost and duration by ${costMult}x. \\n* This item is still beta and subject to balance change, please use immediately after purchase *"
  	 	 	}
  	 	},
  	 	"experienceShard": {
@@ -5577,6 +5640,10 @@
  	 	 	"trans": "Kalibrácia bezpečnosť nano robot",
  	 	 	"eng": "Calibration Safety Nano Bot"
  	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"trans": "AFK odmena podpora",
+ 	 	 	"eng": "AFK Reward Boost"
+ 	 	},
  	 	"pirate": {
  	 	 	"trans": "Exploit chat [Pirate]",
  	 	 	"eng": "Chat Exploit [PIRATE]"
@@ -6346,6 +6413,52 @@
  	 	 	}
  	 	}
  	},
+ 	"chatExploit": {
+ 	 	"loveWords": {
+ 	 	 	"trans": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	],
+ 	 	 	"eng": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	]
+ 	 	}
+ 	},
  	"createClanModal": {
  	 	"gangNameInput": {
  	 	 	"title": {
@@ -6560,6 +6673,14 @@
  	 	 	"trans": "Zľava končí v ${date}",
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
+ 	 	"endDate": {
+ 	 	 	"vars": [
+ 	 	 	 	"date",
+ 	 	 	 	"relative"
+ 	 	 	],
+ 	 	 	"trans": "Limited Pridanie do ${date} (koniec v ${relative})",
+ 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Tento titul nikdy nevyprší.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
@@ -6572,6 +6693,68 @@
  	 	 	],
  	 	 	"trans": "Toto je príklad chatovacieho rámca ${tierName} Tier",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"actionStartModal": {
+ 	 	"timeReductionButton": {
+ 	 	 	"title": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName",
+ 	 	 	 	 	"currentPercent",
+ 	 	 	 	 	""
+ 	 	 	 	],
+ 	 	 	 	"trans": "Zníženie času (v súčasnosti ${currentPercent}%)",
+ 	 	 	 	"eng": "Time Reduction (currently ${currentPercent}%)"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Znížte čas potrebný na akciu o 40%, stohovateľné až do 80%",
+ 	 	 	 	"eng": "Reduce time needed for action by 40%, stackable upto 80%"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "teraz",
+ 	 	 	 	"eng": "reduce now"
+ 	 	 	}
+ 	 	},
+ 	 	"extendButton": {
+ 	 	 	"activatedTitle": {
+ 	 	 	 	"trans": "Zvýšenie odmeňovania (aktivované)",
+ 	 	 	 	"eng": "Reward Boost (Activated)"
+ 	 	 	},
+ 	 	 	"notActivatedTitle": {
+ 	 	 	 	"trans": "Odmeniť",
+ 	 	 	 	"eng": "Reward Boost"
+ 	 	 	},
+ 	 	 	"activatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Aktivovaný Boost, musíte začiarknuť políčko nižšie, aby ste ho mohli povoliť pre túto úlohu",
+ 	 	 	 	"eng": "Boost activated, you must tick the checkbox below to enable it for this task"
+ 	 	 	},
+ 	 	 	"notActivatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Zdvojnásobte položky a exp! zatiaľ čo trvanie a náklady sa zvýšia o 4 krát",
+ 	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "Posilniť teraz",
+ 	 	 	 	"eng": "Boost now"
+ 	 	 	},
+ 	 	 	"enableBoost": {
+ 	 	 	 	"trans": "Povoľte odmenu",
+ 	 	 	 	"eng": "Enable reward boost"
+ 	 	 	}
+ 	 	},
+ 	 	"startButton": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "štart",
+ 	 	 	 	"eng": "start"
+ 	 	 	}
  	 	}
  	}
 }
