--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -349,6 +349,19 @@
  	 	 	}
  	 	},
  	 	"chatBanner": {
+ 	 	 	"chatExploit": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"vpnName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "การแชทหาประโยชน์มีผลส่งข้อความทั้งหมดที่ส่งจะมีการเปลี่ยนแปลง ใช้ ${vpnName} เพื่อรักษาความปลอดภัยการเชื่อมต่อของคุณ!",
+ 	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
+ 	 	 	 	},
+ 	 	 	 	"activateVPN": {
+ 	 	 	 	 	"trans": "เปิดใช้งาน VPN",
+ 	 	 	 	 	"eng": "Activate VPN"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"refreshBuff": {
  	 	 	 	"title": {
  	 	 	 	 	"vars": [
@@ -1484,15 +1497,6 @@
  	 	 	 	"eng": "This item is locked"
  	 	 	}
  	 	},
- 	 	"afkStartPopup": {
- 	 	 	"timeEstimate": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"time"
- 	 	 	 	],
- 	 	 	 	"trans": "จะใช้เวลา ${time}",
- 	 	 	 	"eng": "This will take ${time}"
- 	 	 	}
- 	 	},
  	 	"calibration": {
  	 	 	"confirmation": {
  	 	 	 	"title": {
@@ -2313,7 +2317,7 @@
  	 	},
  	 	"amount": {
  	 	 	"trans": "จำนวน",
- 	 	 	"eng": "Amount"
+ 	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "กำลังการสอบเทียบ",
@@ -3251,6 +3255,10 @@
  	 	 	"trans": "ศักดิ์ศรี",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation11": {
+ 	 	 	"trans": "ไซเบอร์คิทตี้",
+ 	 	 	"eng": "CyberKitty"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "พิธีกร",
  	 	 	"eng": "Moderator"
@@ -3610,6 +3618,46 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "โปรไฟล์เฟรมฮาโลวีน (พร้อมแอนิเมชั่น)",
  	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "ปลดล็อกชีวภาพที่กำหนดเอง",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "การตกแต่งบาร์โค้ดในโปรไฟล์",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "ปรับแต่งคำขวัญแก๊งค์",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "ปรับแต่งภาพแก๊งค์",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "การอัปเดตเพิ่มเติมในอนาคต",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation11": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "ชื่อ \"Cyberkitty\"",
+ 	 	 	 	 	"eng": "\"CyberKitty\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "ปลดล็อกการปรับแต่งรูปภาพโปรไฟล์",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "กรอบแชทคิตตี้ (พร้อมแอนิเมชั่น)",
+ 	 	 	 	 	"eng": "Kitty chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "โปรไฟล์กรอบคิตตี้ (พร้อมแอนิเมชั่น)",
+ 	 	 	 	 	"eng": "Kitty Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "ปลดล็อกชีวภาพที่กำหนดเอง",
@@ -4432,7 +4480,22 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "ฟักทองแกะสลักที่มีไฟส่องสว่างภายใน เป็นรายการตกแต่งที่ใช้สำหรับวันฮาโลวีน",
- 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
+ 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween. You can craft a Locked Legendary Container with 100 of this"
+ 	 	 	}
+ 	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "รางวัล Booster Shard",
+ 	 	 	 	"eng": "Reward Booster Shard"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"rewardMult",
+ 	 	 	 	 	"time",
+ 	 	 	 	 	"costMult"
+ 	 	 	 	],
+ 	 	 	 	"trans": "ในขณะที่ Shard มีการใช้งานผู้เล่นทุกคนสามารถเลือกที่จะเริ่มงาน AFK บางอย่างใน Boost Mode ™ได้รับรางวัล ${rewardMult} x ในขณะที่เพิ่มต้นทุนและระยะเวลาโดย ${costMult} x \\ n * รายการนี้ยังคงเป็นเบต้าและอาจมีการเปลี่ยนแปลงสมดุลโปรดใช้ทันทีหลังจากซื้อ *",
+ 	 	 	 	"eng": "While shard is active all players can choose to start certain AFK tasks in Boost Mode™, gaining ${rewardMult}x reward while increasing cost and duration by ${costMult}x. \\n* This item is still beta and subject to balance change, please use immediately after purchase *"
  	 	 	}
  	 	},
  	 	"experienceShard": {
@@ -5364,6 +5427,10 @@
  	 	 	"trans": "การสอบเทียบความปลอดภัยของนาโนบอท",
  	 	 	"eng": "Calibration Safety Nano Bot"
  	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"trans": "เพิ่มรางวัล AFK",
+ 	 	 	"eng": "AFK Reward Boost"
+ 	 	},
  	 	"pirate": {
  	 	 	"trans": "แชทใช้ประโยชน์ [โจรสลัด]",
  	 	 	"eng": "Chat Exploit [PIRATE]"
@@ -6133,6 +6200,52 @@
  	 	 	}
  	 	}
  	},
+ 	"chatExploit": {
+ 	 	"loveWords": {
+ 	 	 	"trans": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	],
+ 	 	 	"eng": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	]
+ 	 	}
+ 	},
  	"createClanModal": {
  	 	"gangNameInput": {
  	 	 	"title": {
@@ -6347,6 +6460,14 @@
  	 	 	"trans": "ส่วนลดสิ้นสุดลงใน ${date}",
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
+ 	 	"endDate": {
+ 	 	 	"vars": [
+ 	 	 	 	"date",
+ 	 	 	 	"relative"
+ 	 	 	],
+ 	 	 	"trans": "การเพิ่มจำนวนมากจนถึง ${date} (สิ้นสุดใน ${relative})",
+ 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "ชื่อนี้จะไม่มีวันหมดอายุ \\ nit กับบัญชีของคุณตลอดไป",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
@@ -6359,6 +6480,68 @@
  	 	 	],
  	 	 	"trans": "นี่เป็นตัวอย่างกรอบข้อความของ Tier ${tierName}",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"actionStartModal": {
+ 	 	"timeReductionButton": {
+ 	 	 	"title": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName",
+ 	 	 	 	 	"currentPercent",
+ 	 	 	 	 	""
+ 	 	 	 	],
+ 	 	 	 	"trans": "การลดเวลา (ปัจจุบัน ${currentPercent}%)",
+ 	 	 	 	"eng": "Time Reduction (currently ${currentPercent}%)"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "ลดเวลาที่จำเป็นสำหรับการดำเนินการ 40%วางซ้อนกันได้สูงสุด 80%",
+ 	 	 	 	"eng": "Reduce time needed for action by 40%, stackable upto 80%"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "ลดลงตอนนี้",
+ 	 	 	 	"eng": "reduce now"
+ 	 	 	}
+ 	 	},
+ 	 	"extendButton": {
+ 	 	 	"activatedTitle": {
+ 	 	 	 	"trans": "รางวัล Boost (เปิดใช้งาน)",
+ 	 	 	 	"eng": "Reward Boost (Activated)"
+ 	 	 	},
+ 	 	 	"notActivatedTitle": {
+ 	 	 	 	"trans": "รางวัล Boost",
+ 	 	 	 	"eng": "Reward Boost"
+ 	 	 	},
+ 	 	 	"activatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Boost เปิดใช้งานคุณต้องทำเครื่องหมายในช่องทำเครื่องหมายด้านล่างเพื่อเปิดใช้งานสำหรับงานนี้",
+ 	 	 	 	"eng": "Boost activated, you must tick the checkbox below to enable it for this task"
+ 	 	 	},
+ 	 	 	"notActivatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "เพิ่มรายการและ exp! ในขณะที่ระยะเวลาและค่าใช้จ่ายจะเพิ่มขึ้น 4 เท่า",
+ 	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "เพิ่มตอนนี้",
+ 	 	 	 	"eng": "Boost now"
+ 	 	 	},
+ 	 	 	"enableBoost": {
+ 	 	 	 	"trans": "เปิดใช้งานรางวัล Boost",
+ 	 	 	 	"eng": "Enable reward boost"
+ 	 	 	}
+ 	 	},
+ 	 	"startButton": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "เริ่ม",
+ 	 	 	 	"eng": "start"
+ 	 	 	}
  	 	}
  	}
 }
