--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -49,7 +49,7 @@
  	 	 	"editMotto": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Entre le slogan de ton gang",
+ 	 	 	 	 	 	"trans": "Entre la devise de ton gang",
  	 	 	 	 	 	"eng": "Please enter your gang motto"
  	 	 	 	 	}
  	 	 	 	},
@@ -174,7 +174,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "Les habitants de l'Ukraine, de la Russie et du monde entier souffrent a cause de l'ambition d'un homme. \n Faites l'amour, pas la guerre.",
+ 	 	 	 	"trans": "Les habitants de l'Ukraine, de la Russie et du monde entier souffrent à cause de l'ambition d'un homme. \n Faites l'amour, pas la guerre.",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -349,6 +349,19 @@
  	 	 	}
  	 	},
  	 	"chatBanner": {
+ 	 	 	"chatExploit": {
+ 	 	 	 	"title": {
+ 	 	 	 	 	"vars": [
+ 	 	 	 	 	 	"vpnName"
+ 	 	 	 	 	],
+ 	 	 	 	 	"trans": "L'exploit de chat est en vigueur, tous les messages envoyés seront modifiés. Utilisez ${vpnName} pour sécuriser votre connexion!",
+ 	 	 	 	 	"eng": "Chat exploit is in effect, all message sent will be altered. use ${vpnName} to secure your connection!"
+ 	 	 	 	},
+ 	 	 	 	"activateVPN": {
+ 	 	 	 	 	"trans": "Activer VPN",
+ 	 	 	 	 	"eng": "Activate VPN"
+ 	 	 	 	}
+ 	 	 	},
  	 	 	"refreshBuff": {
  	 	 	 	"title": {
  	 	 	 	 	"vars": [
@@ -379,7 +392,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"cost"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "Le chat gang sera activé lorsque vous appartenez à un gang. \\ njoin a gang en se faisant des amis dans le chat mondial ou créez votre propre gang et invitez vos amis!",
+ 	 	 	 	 	"trans": "Le chat de gang sera activé lorsque vous appartiendrez à un gang.\\nRejoignez un gang en vous faisant des amis dans le chat mondial ou créez votre propre gang et invitez vos amis!",
  	 	 	 	 	"eng": "gang chat will be enabled when you belong to a gang.\\njoin a gang by making friends in global chat or create your own gang and invite your friends!"
  	 	 	 	},
  	 	 	 	"createButton": {
@@ -1484,15 +1497,6 @@
  	 	 	 	"eng": "This item is locked"
  	 	 	}
  	 	},
- 	 	"afkStartPopup": {
- 	 	 	"timeEstimate": {
- 	 	 	 	"vars": [
- 	 	 	 	 	"time"
- 	 	 	 	],
- 	 	 	 	"trans": "Cela prendra ${time}",
- 	 	 	 	"eng": "This will take ${time}"
- 	 	 	}
- 	 	},
  	 	"calibration": {
  	 	 	"confirmation": {
  	 	 	 	"title": {
@@ -2313,7 +2317,7 @@
  	 	},
  	 	"amount": {
  	 	 	"trans": "Montant",
- 	 	 	"eng": "Amount"
+ 	 	 	"eng": "amount"
  	 	},
  	 	"itemUpgradeCapacity": {
  	 	 	"trans": "Capacité de Calibrage",
@@ -3251,6 +3255,10 @@
  	 	 	"trans": "Prestige",
  	 	 	"eng": "Prestige"
  	 	},
+ 	 	"donation11": {
+ 	 	 	"trans": "Cyberkitty",
+ 	 	 	"eng": "CyberKitty"
+ 	 	},
  	 	"moderator": {
  	 	 	"trans": "Modérateur",
  	 	 	"eng": "Moderator"
@@ -3610,6 +3618,46 @@
  	 	 	 	"4": {
  	 	 	 	 	"trans": "Profil encadré Halloween (avec animation)",
  	 	 	 	 	"eng": "Halloween Framed Profile (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"5": {
+ 	 	 	 	 	"trans": "Déverrouiller la biographie personnalisée",
+ 	 	 	 	 	"eng": "Unlock custom bio"
+ 	 	 	 	},
+ 	 	 	 	"6": {
+ 	 	 	 	 	"trans": "Décoration de code-barres sur profil",
+ 	 	 	 	 	"eng": "Barcode decoration on profile"
+ 	 	 	 	},
+ 	 	 	 	"7": {
+ 	 	 	 	 	"trans": "Personnaliser la devise des gangs",
+ 	 	 	 	 	"eng": "Customize gang motto"
+ 	 	 	 	},
+ 	 	 	 	"8": {
+ 	 	 	 	 	"trans": "Personnaliser l'image des gangs",
+ 	 	 	 	 	"eng": "Customize gang image"
+ 	 	 	 	},
+ 	 	 	 	"9": {
+ 	 	 	 	 	"trans": "Plus à venir dans la future mise à jour",
+ 	 	 	 	 	"eng": "More coming in future update"
+ 	 	 	 	}
+ 	 	 	}
+ 	 	},
+ 	 	"donation11": {
+ 	 	 	"benefits": {
+ 	 	 	 	"1": {
+ 	 	 	 	 	"trans": "Titre de don \"Cyberkitty\"",
+ 	 	 	 	 	"eng": "\"CyberKitty\" donation title"
+ 	 	 	 	},
+ 	 	 	 	"2": {
+ 	 	 	 	 	"trans": "Déverrouiller la personnalisation de l'image du profil",
+ 	 	 	 	 	"eng": "Unlock profile picture customization"
+ 	 	 	 	},
+ 	 	 	 	"3": {
+ 	 	 	 	 	"trans": "Cadre de chat Kitty (avec animation)",
+ 	 	 	 	 	"eng": "Kitty chat frame (with animation)"
+ 	 	 	 	},
+ 	 	 	 	"4": {
+ 	 	 	 	 	"trans": "Profil encadré Kitty (avec animation)",
+ 	 	 	 	 	"eng": "Kitty Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
  	 	 	 	 	"trans": "Déverrouiller la biographie personnalisée",
@@ -4432,7 +4480,22 @@
  	 	 	},
  	 	 	"description": {
  	 	 	 	"trans": "Une citrouille sculptée allumée par une LED à l'intérieur. C'est une utilisation décorative pour Halloween.",
- 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween."
+ 	 	 	 	"eng": "A carved pumpkin that is lit by a LED inside. It's a decorative item use for of Halloween. You can craft a Locked Legendary Container with 100 of this"
+ 	 	 	}
+ 	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"name": {
+ 	 	 	 	"trans": "Récompense Booster Shard",
+ 	 	 	 	"eng": "Reward Booster Shard"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"rewardMult",
+ 	 	 	 	 	"time",
+ 	 	 	 	 	"costMult"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Alors que Shard est actif, tous les joueurs peuvent choisir de démarrer certaines tâches AFK dans Boost Mode ™, en gagnant une récompense ${rewardMult} x tout en augmentant le coût et la durée de ${costMult} x. \\ n * Cet article est toujours bêta et sous réserve de changement de solde, veuillez utiliser immédiatement après l'achat *",
+ 	 	 	 	"eng": "While shard is active all players can choose to start certain AFK tasks in Boost Mode™, gaining ${rewardMult}x reward while increasing cost and duration by ${costMult}x. \\n* This item is still beta and subject to balance change, please use immediately after purchase *"
  	 	 	}
  	 	},
  	 	"experienceShard": {
@@ -5364,6 +5427,10 @@
  	 	 	"trans": "Nano-bot de sécurisation de calibrage",
  	 	 	"eng": "Calibration Safety Nano Bot"
  	 	},
+ 	 	"afkRewardBoost": {
+ 	 	 	"trans": "Boost de récompense AFK",
+ 	 	 	"eng": "AFK Reward Boost"
+ 	 	},
  	 	"pirate": {
  	 	 	"trans": "Piratage du Tchat [PIRATE]",
  	 	 	"eng": "Chat Exploit [PIRATE]"
@@ -5440,7 +5507,7 @@
  	},
  	"chatServer": {
  	 	"restarting": {
- 	 	 	"trans": "Le serveur de chat redémarre pour une mise à jour ...",
+ 	 	 	"trans": "Le serveur de tchat redémarre pour une mise à jour ...",
  	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
@@ -5811,7 +5878,7 @@
  	 	 	 	"likerName",
  	 	 	 	"amount"
  	 	 	],
- 	 	 	"trans": "${likerName} t'as envoyé ${amount} respects pour ton 'Skip'",
+ 	 	 	"trans": "${likerName} t'a envoyé ${amount} respects pour ton 'Skip'",
  	 	 	"eng": "${likerName} has send you ${amount} respects for your skip"
  	 	}
  	},
@@ -5845,7 +5912,7 @@
  	 	 	 	 	"totalPrice",
  	 	 	 	 	"CURRENCY"
  	 	 	 	],
- 	 	 	 	"trans": "Prix total: ${totalPrice} ${CURRENCY}",
+ 	 	 	 	"trans": "Prix total : ${totalPrice} ${CURRENCY}",
  	 	 	 	"eng": "Total price: ${totalPrice} ${CURRENCY}"
  	 	 	}
  	 	}
@@ -5931,7 +5998,7 @@
  	 	 	},
  	 	 	"agreeToggle": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Je comprends et je n'enverrai jamais de spam ni n'enfreindrai aucune des règles du chat",
+ 	 	 	 	 	"trans": "Je comprends et je n'enverrai jamais de spam ni n'enfreindrai aucune des règles du tchat",
  	 	 	 	 	"eng": "I understand and I will never spam or break any of the chat rules"
  	 	 	 	}
  	 	 	},
@@ -5941,7 +6008,7 @@
  	 	 	},
  	 	 	"confirmButton": {
  	 	 	 	"agreed": {
- 	 	 	 	 	"trans": "Je ne spamme pas",
+ 	 	 	 	 	"trans": "Je ne spammerai pas",
  	 	 	 	 	"eng": "I won't spam"
  	 	 	 	},
  	 	 	 	"notAgree": {
@@ -6056,7 +6123,7 @@
  	 	 	 	 	"from",
  	 	 	 	 	"to"
  	 	 	 	],
- 	 	 	 	"trans": "${from} ==> ${to}",
+ 	 	 	 	"trans": "${from} => ${to}",
  	 	 	 	"eng": "${from} => ${to}"
  	 	 	}
  	 	},
@@ -6133,6 +6200,52 @@
  	 	 	}
  	 	}
  	},
+ 	"chatExploit": {
+ 	 	"loveWords": {
+ 	 	 	"trans": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	],
+ 	 	 	"eng": [
+ 	 	 	 	"Love you",
+ 	 	 	 	"You guys are great",
+ 	 	 	 	"You guys are the best",
+ 	 	 	 	"love yall",
+ 	 	 	 	"You are amazing",
+ 	 	 	 	"we are best friend",
+ 	 	 	 	"Love you all",
+ 	 	 	 	"you are great",
+ 	 	 	 	"you the best",
+ 	 	 	 	"we are awesome",
+ 	 	 	 	"you are awesome",
+ 	 	 	 	"have a nice day",
+ 	 	 	 	"miss you",
+ 	 	 	 	"miss you guys",
+ 	 	 	 	"KYAAAAAAAAA",
+ 	 	 	 	"wish you have nice day",
+ 	 	 	 	"I love you",
+ 	 	 	 	"can we hug?",
+ 	 	 	 	"how much you love me?"
+ 	 	 	]
+ 	 	}
+ 	},
  	"createClanModal": {
  	 	"gangNameInput": {
  	 	 	"title": {
@@ -6146,11 +6259,11 @@
  	 	},
  	 	"gangShortNameInput": {
  	 	 	"title": {
- 	 	 	 	"trans": "Jour de gang",
+ 	 	 	 	"trans": "Diminutif du gang",
  	 	 	 	"eng": "Gang Tag"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Une courte balise qui sera affichée dans le chat",
+ 	 	 	 	"trans": "Un diminutif qui sera affiché dans le tchat",
  	 	 	 	"eng": "A short tag that will be displayed in chat"
  	 	 	}
  	 	},
@@ -6160,7 +6273,7 @@
  	 	},
  	 	"error": {
  	 	 	"noNameOrShortName": {
- 	 	 	 	"trans": "Veuillez saisir un nom et une balise",
+ 	 	 	 	"trans": "Veuillez saisir un nom et un diminutif",
  	 	 	 	"eng": "Please enter a name and a tag"
  	 	 	}
  	 	}
@@ -6185,7 +6298,7 @@
  	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "Pendant Halloween, un niveau de don de chat cyber-bat Time Limited sera disponible!",
+ 	 	 	"trans": "Pendant Halloween, un niveau de don de tchat 'cyber-bat' sera disponible pour un temps limité !",
  	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
  	 	}
  	},
@@ -6208,16 +6321,16 @@
  	 	},
  	 	"instruction": {
  	 	 	"title": {
- 	 	 	 	"trans": "Comment se référer?",
+ 	 	 	 	"trans": "Comment se référer ?",
  	 	 	 	"eng": "How to refer?"
  	 	 	},
  	 	 	"step1": {
- 	 	 	 	"trans": "2. Fait, c'est tout!",
+ 	 	 	 	"trans": "2. Fait, c'est tout !",
  	 	 	 	"eng": "2. done, thats it!"
  	 	 	}
  	 	},
  	 	"footnote1": {
- 	 	 	"trans": "* Vous obtenez une unité bonus de 10% chaque fois que votre ami achète l'unité",
+ 	 	 	"trans": "* Vous obtenez un bonus en unités de 10% chaque fois que votre ami achète des unités",
  	 	 	"eng": "*you get 10% bonus unit whenever your friend purchases unit"
  	 	},
  	 	"footnote2": {
@@ -6230,11 +6343,11 @@
  	 	 	"vars": [
  	 	 	 	"playerName"
  	 	 	],
- 	 	 	"trans": "Rapport ${playerName}",
+ 	 	 	"trans": "Signaler ${playerName}",
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Le rapport sera envoyé automatiquement aux modérateurs. \\ nVeuillez ne pas faire d'abus, de spamming ou jouer avec le système de rapport.",
+ 	 	 	"trans": "Le signalement sera envoyé automatiquement aux modérateurs. \\nVeuillez ne pas faire d'abus, de spamming ou jouer avec le système de signalement.",
  	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
@@ -6249,11 +6362,11 @@
  	 	},
  	 	"error": {
  	 	 	"otherNoText": {
- 	 	 	 	"trans": "Le type de rapport «Autre» a besoin d'une description",
+ 	 	 	 	"trans": "Le type de signalement «Autre» a besoin d'une description",
  	 	 	 	"eng": "Report type of \"Other\" needs a description"
  	 	 	},
  	 	 	"noReportType": {
- 	 	 	 	"trans": "Vous devez sélectionner un type de rapport",
+ 	 	 	 	"trans": "Vous devez sélectionner un type de signalement",
  	 	 	 	"eng": "You need to select a report type"
  	 	 	}
  	 	}
@@ -6347,6 +6460,14 @@
  	 	 	"trans": "La promotion se termine le ${date}",
  	 	 	"eng": "Discount ends in ${date}"
  	 	},
+ 	 	"endDate": {
+ 	 	 	"vars": [
+ 	 	 	 	"date",
+ 	 	 	 	"relative"
+ 	 	 	],
+ 	 	 	"trans": "Ajout limité jusqu'à ${date} (se terminer par ${relative})",
+ 	 	 	"eng": "Limited addition till ${date} (end in ${relative})"
+ 	 	},
  	 	"permanentDescription": {
  	 	 	"trans": "Ce titre n'expirera jamais. \\nIl reste avec ton compte pour toujours.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
@@ -6359,6 +6480,68 @@
  	 	 	],
  	 	 	"trans": "Ceci est un exemple de bannière niveau ${tierName}",
  	 	 	"eng": "example chat frame of ${tierName} Tier"
+ 	 	}
+ 	},
+ 	"actionStartModal": {
+ 	 	"timeReductionButton": {
+ 	 	 	"title": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName",
+ 	 	 	 	 	"currentPercent",
+ 	 	 	 	 	""
+ 	 	 	 	],
+ 	 	 	 	"trans": "Réduction du temps (actuellement ${currentPercent}%)",
+ 	 	 	 	"eng": "Time Reduction (currently ${currentPercent}%)"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Réduire le temps nécessaire à l'action de 40%, empilable jusqu'à 80%",
+ 	 	 	 	"eng": "Reduce time needed for action by 40%, stackable upto 80%"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "réduire maintenant",
+ 	 	 	 	"eng": "reduce now"
+ 	 	 	}
+ 	 	},
+ 	 	"extendButton": {
+ 	 	 	"activatedTitle": {
+ 	 	 	 	"trans": "RÉCOMPENDRE BOOD (activé)",
+ 	 	 	 	"eng": "Reward Boost (Activated)"
+ 	 	 	},
+ 	 	 	"notActivatedTitle": {
+ 	 	 	 	"trans": "Récompense Boost",
+ 	 	 	 	"eng": "Reward Boost"
+ 	 	 	},
+ 	 	 	"activatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Boost activé, vous devez cocher la case à cocher ci-dessous pour l'activer pour cette tâche",
+ 	 	 	 	"eng": "Boost activated, you must tick the checkbox below to enable it for this task"
+ 	 	 	},
+ 	 	 	"notActivatedDescription": {
+ 	 	 	 	"vars": [
+ 	 	 	 	 	"itemName"
+ 	 	 	 	],
+ 	 	 	 	"trans": "Doublez les articles et exp! tandis que la durée et le coût augmenteront de 4 fois",
+ 	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
+ 	 	 	},
+ 	 	 	"activate": {
+ 	 	 	 	"trans": "Accélérez maintenant",
+ 	 	 	 	"eng": "Boost now"
+ 	 	 	},
+ 	 	 	"enableBoost": {
+ 	 	 	 	"trans": "Activer la récompense Boost",
+ 	 	 	 	"eng": "Enable reward boost"
+ 	 	 	}
+ 	 	},
+ 	 	"startButton": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "début",
+ 	 	 	 	"eng": "start"
+ 	 	 	}
  	 	}
  	}
 }
